fixed wrong background glitch for homepage

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
-body {
+body, html {
   margin: 0px;
   background-color: black;
 }
@@ -56,6 +56,7 @@ h4 {
 }
 
 .whats-new {
+  background-color: black;
   display: flex;
   justify-content: center;
   /* width: 100%; */
@@ -65,6 +66,7 @@ h4 {
 
 .new-card {
   height: 42px;
+
 }
 
 
