--- a/src/styles/whatsNew.css
+++ b/src/styles/whatsNew.css
@@ -1,5 +1,10 @@
+body {
+    background-color: black;
+
+}
+
 .whats-new-container {
-    background-color: white;
+    background-color: black;
     width: 93%;
     height: 400px;
     display: flex;
@@ -7,8 +12,8 @@
     flex-direction: column;
     text-align: center;
     align-items: center;
-    border-radius: 0px 30px;
-
+    border-radius: 0px 100px;
+    border: 3px solid white;
     /* align-items: center; */
 }
 
@@ -23,6 +28,11 @@
     justify-content: center;
     align-items: center;
     height: 600px;
+    border-top: 3px solid #D0F1BF;
+    background: #863131;
+    background: -moz-linear-gradient(top, #863131 0%, #481A1A 0%, #000000 100%);
+    background: -webkit-linear-gradient(top, #863131 0%, #481A1A 0%, #000000 100%);
+    background: linear-gradient(to bottom, #863131 0%, #481A1A 0%, #000000 100%);
 }
 
 p {
